[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/UI/StoryFrame.png" type="Texture" id=1]
[ext_resource path="res://Textures/Scenes/Prologue1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TypewriterLabel.gd" type="Script" id=3]
[ext_resource path="res://SFX/キーボードの早打ち1.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scripts/StoryMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/tahomabd.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "PlayTypingSFX"
length = 7.0
tracks/0/type = "audio"
tracks/0/path = NodePath("SFX_Typing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 3.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("SFX_Typing:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 15.0, 10.0, -50.0 ]
}

[node name="StoryMenu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="StoryBoard" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = -259.5
margin_right = 334.5
margin_bottom = 259.5

[node name="TextureRect_Frame" type="TextureRect" parent="StoryBoard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = -259.5
margin_right = 334.5
margin_bottom = 259.5
texture = ExtResource( 1 )

[node name="TextureRect_Scene" type="TextureRect" parent="StoryBoard"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -304.0
margin_top = 38.0
margin_right = 304.0
margin_bottom = 313.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="StoryBoard"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.5
margin_top = 120.0
margin_right = -39.5
margin_bottom = 183.0
custom_colors/font_color = Color( 0.278431, 0.2, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Blalalalalalalalalala Blalalalalalalalalala Blalalalala Blalalalalalalalalala"
align = 1
autowrap = true
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="StoryBoard/Label"]

[node name="SFX_Typing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 15.0

[node name="AnimationPlayer_Typing" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/PlayTypingSFX = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
